--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="PAGINA HUASA PARIENTE" property="og:title" />
     <meta content="#VIVACHILE" property="og:description" />
-    <meta content="https://piero47.cloud/" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/1236839182119338086/1254540149925220492/Vw1tQnk.png?ex=6679dd0f&is=66788b8f&hm=fb6b5e40ea7d2e6dba5316e6eea3888cd93cbb7415d9bb6011223c5addeeba96&" property="og:image" />
+    <meta content="https://igna.club/" property="og:url" />
+    <meta content="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif" property="og:image" />
     <meta content="#ff0000" data-react-helmet="true" name="theme-color" />
     <style>
         body {
