--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 </head>
 <body>
     <div>
-        <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 MI GANCHO UYUUUUUY</h1>
+        <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 MI GANCHO UUYUYYYY PARIENTE MIERDAAA</h1>
         <div id="cuenta"></div>
-        <img src="https://cdn.discordapp.com/attachments/1236839182119338086/1254540149925220492/Vw1tQnk.png?ex=6679dd0f&is=66788b8f&hm=fb6b5e40ea7d2e6dba5316e6eea3888cd93cbb7415d9bb6011223c5addeeba96&">
+        <img src="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif">
     </div>
     <script>
         function getDeviceDate() {
