--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="PAGINA HUASA PARIENTE" property="og:title" />
-    <meta content="#VIVACHILE" property="og:description" />
+    <meta content="discord.gg/esex my people" property="og:title" />
+    <meta content="niggas" property="og:description" />
     <meta content="https://igna.club/" property="og:url" />
     <meta content="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif" property="og:image" />
     <meta content="#ff0000" data-react-helmet="true" name="theme-color" />
