--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="discord.gg/esex my people" property="og:title" />
-    <meta content="niggas" property="og:description" />
+    <meta content="tiempo faltante para el 18 de chile" property="og:title" />
+    <meta content="#CHILE" property="og:description" />
     <meta content="https://igna.club/" property="og:url" />
     <meta content="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif" property="og:image" />
     <meta content="#ff0000" data-react-helmet="true" name="theme-color" />
@@ -19,6 +19,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            flex-direction: column;
         }
 
         #h1 {
@@ -34,6 +35,11 @@
         #cuenta {
             margin-top: 20px; 
         }
+
+        #currentDate {
+            margin-top: 20px;
+            font-size: 1.2em;
+        }
     </style>
     <link href="https://fonts.cdnfonts.com/css/pusab" rel="stylesheet">
     <title>Countdown to 18 de Septiembre</title>
@@ -42,6 +48,7 @@
     <div>
         <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 MI GANCHO UUYUYYYY PARIENTE MIERDAAA</h1>
         <div id="cuenta"></div>
+        <div id="currentDate"></div>
         <img src="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif">
     </div>
     <script>
@@ -63,6 +70,9 @@
             if (daysLeft <= 0) {
                 h1.innerHTML = "¡YA ES EL 18 MIERDA! A DISFRUTAR GANCHO";
             }
+
+            let currentDateElement = document.getElementById("currentDate");
+            currentDateElement.innerHTML = "Dias faltantes : " + now.toLocaleString();
         }
 
         updateDaysCountdown();
