--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="tiempo faltante para el 18 de chile" property="og:title" />
+    <meta content="tiempo faltante para el 18 de septiembre en Chile" property="og:title" />
     <meta content="#CHILE" property="og:description" />
     <meta content="https://igna.club/" property="og:url" />
     <meta content="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif" property="og:image" />
@@ -28,17 +28,12 @@
         }
 
         #days {
-            font-size: 1em; 
+            font-size: 1.5em; 
             font-weight: bold;
         }
 
         #cuenta {
             margin-top: 20px; 
-        }
-
-        #currentDate {
-            margin-top: 20px;
-            font-size: 1.2em;
         }
     </style>
     <link href="https://fonts.cdnfonts.com/css/pusab" rel="stylesheet">
@@ -46,9 +41,8 @@
 </head>
 <body>
     <div>
-        <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 MI GANCHO UUYUYYYY PARIENTE MIERDAAA</h1>
+        <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 DE SEPTIEMBRE</h1>
         <div id="cuenta"></div>
-        <div id="currentDate"></div>
         <img src="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif">
     </div>
     <script>
@@ -58,7 +52,13 @@
 
         function updateDaysCountdown() {
             let now = getDeviceDate(); 
-            let targetDate = new Date(now.getFullYear(), 8, 18, 9, 0, 0); 
+            let currentYear = now.getFullYear();
+            let targetDate = new Date(currentYear, 8, 18, 9, 0, 0); 
+
+            // Si ya paso el anio, que pase al siguiente para evitar bugs.
+            if (now > targetDate) {
+                targetDate.setFullYear(currentYear + 1);
+            }
 
             let daysLeft = Math.floor((targetDate - now) / (1000 * 60 * 60 * 24));
 
@@ -68,11 +68,8 @@
             let h1 = document.getElementById("h1");
 
             if (daysLeft <= 0) {
-                h1.innerHTML = "¡YA ES EL 18 MIERDA! A DISFRUTAR GANCHO";
+                h1.innerHTML = "¡YA ES EL 18 DE SEPTIEMBRE! A DISFRUTAR GANCHO";
             }
-
-            let currentDateElement = document.getElementById("currentDate");
-            currentDateElement.innerHTML = "Dias faltantes : " + now.toLocaleString();
         }
 
         updateDaysCountdown();
