--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="tiempo faltante para el 18 de septiembre en Chile" property="og:title" />
+    <meta content="time remaining for the 18th of September in Chile" property="og:title" />
     <meta content="#CHILE" property="og:description" />
     <meta content="https://igna.club/" property="og:url" />
     <meta content="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif" property="og:image" />
@@ -27,7 +27,7 @@
             line-height: 1.5;
         }
 
-        #days {
+        #countdown {
             font-size: 1.5em; 
             font-weight: bold;
         }
@@ -42,11 +42,11 @@
         }
     </style>
     <link href="https://fonts.cdnfonts.com/css/pusab" rel="stylesheet">
-    <title>Countdown to 18 de Septiembre</title>
+    <title>Countdown to 18th September</title>
 </head>
 <body>
     <div>
-        <h1 id="h1">FALTAN <span id="days"></span> DÍAS PARA EL 18 DE SEPTIEMBRE</h1>
+        <h1 id="h1">FALTAN <span id="countdown"></span> PARA EL 18 DE SEPTIEMBRE</h1>
         <div id="cuenta"></div>
         <img src="https://cdn.pixabay.com/animation/2022/08/07/20/19/20-19-50-911_512.gif">
         <div id="current-time"></div>
@@ -61,24 +61,31 @@
             let currentYear = now.getFullYear();
             let targetDate = new Date(currentYear, 8, 18, 9, 0, 0); 
 
-            // Si ya paso el anio, que pase al siguiente para evitar bugs.
+            // If the target date has already passed this year, set it to next year lol
             if (now > targetDate) {
                 targetDate.setFullYear(currentYear + 1);
             }
 
-            let daysLeft = Math.floor((targetDate - now) / (1000 * 60 * 60 * 24));
+            let timeDifference = targetDate - now;
 
-            let daysLeftElement = document.getElementById("days");
-            daysLeftElement.innerHTML = daysLeft;
+            let monthsLeft = targetDate.getMonth() - now.getMonth() + (12 * (targetDate.getFullYear() - now.getFullYear()));
+            let daysLeft = Math.floor(timeDifference / (1000 * 60 * 60 * 24));
+            let hoursLeft = Math.floor((timeDifference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            let minutesLeft = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
+            let secondsLeft = Math.floor((timeDifference % (1000 * 60)) / 1000);
+
+            // Update the countdown :v
+            let countdownElement = document.getElementById("countdown");
+            countdownElement.innerHTML = `${monthsLeft} months, ${daysLeft} days, ${hoursLeft} hours, ${minutesLeft} minutes, ${secondsLeft} seconds`;
 
             let h1 = document.getElementById("h1");
 
-            if (daysLeft <= 0) {
+            if (timeDifference <= 0) {
                 h1.innerHTML = "¡YA ES EL 18 DE SEPTIEMBRE! A DISFRUTAR GANCHO";
             }
         }
 
-        // Muestra la fecha de tu paisxd
+        // Show the current date and time in the user's country
         function updateLocalTime() {
             fetch('https://ipinfo.io?token=a19b736a7cd05e')  
                 .then(response => response.json())
@@ -90,16 +97,17 @@
                     const localDate = new Intl.DateTimeFormat('en-US', options).format(new Date());
 
                     const currentTimeElement = document.getElementById("current-time");
-                    currentTimeElement.innerHTML = `Fecha y hora actual en donde estas : ${country}: ${localDate}`;
+                    currentTimeElement.innerHTML = `Current date and time in your location (${country}) : ${localDate}`;
                 })
                 .catch(error => console.error('Error getting location:', error));
         }
 
+        // this shit update all that
         updateDaysCountdown();
         updateLocalTime();
 
-        setInterval(updateDaysCountdown, 60000);
-        setInterval(updateLocalTime, 60000); // Update the time every minute
+        setInterval(updateDaysCountdown, 1000); 
+        setInterval(updateLocalTime, 60000);
     </script>
 </body>
 </html>
